# sfconn

./: .gitignore  README.md  build.nix  flake.nix  pyproject.toml  setup.cfg  sfconn.nix  sfconn02x.nix
.github/workflows/: flake8.yaml  linting.yaml  release.yaml
sfconn/: __init__.py  __main__.py  conn.py  cursor.py  jwt.py  privkey.py  types.py  utils.py
tests/: conftest.py  test.conf  test_config.py  test_conn.py  test_cursor.py  test_jwt.py  test_pytype.py
