[metadata]
name = sfconn
version = attr: sfconn.__version__
description = Snowflake connection helpers
long_description = file: README.md
long_description_content_type = text/markdown
author = Paresh Adhia
author_email = paresh.adhia@snowflake.com
url = https://github.com/padhia/sfconn
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages =
    sfconn
install_requires =
    snowflake-connector-python
python_requires = >= 3.9
tests_require = pytest

[options.extras_require]
keyring = keyring
jwt = pyjwt

[mypy]
ignore_missing_imports=true

[flake8]
ignore = W191,E128
max-line-length = 140
